--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -17,10 +17,67 @@
 // $link-hover-color: grey;
 // $font-family-sans-serif: "Helvetica Neue";
 
+$primary: black;
+$body-bg: white;
+
 // Import Bootstrap styles:
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
 // Import partials:
 
 // Custom styles:
+
+ .nav-link:hover {
+ text-decoration: underline;
+}
+
+ .jumbotron{
+  background-image: url("../img/pirate-ship.jpg");
+  background-repeat:no-repeat; 
+  background-position:center; 
+  background-size:cover;
+  font-family: "Ewert", serif;
+  }
+
+ .display-4 {
+    color: $body-bg;
+    padding-top: 7rem;
+  }
+
+ .lead {
+   color: $body-bg;
+   padding-bottom: 7rem;
+  }
+
+ footer {
+ background-color: rgb(78, 194, 84);
+ text-align: center;
+ margin: 10px;
+ padding: 5px 10px;
+ }
+
+ .card-title {
+  font-weight: bold;
+ }
+
+ p.byline {
+  font-style: italic;
+  }
+
+ h5.byline {
+    font-weight: bold;
+  }
+
+ .carousel-item {
+  background: no-repeat scroll center scroll;
+  background-size: cover;
+ }
+
+ .carousel-caption {
+  color: $body-bg;
+  background: rgba(0, 0, 0, 0.5);
+  padding: 10px;
+ }
+
+
 
