--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -31,7 +31,7 @@ $body-bg: white;
  text-decoration: underline;
 }
 
- .jumbotron{
+ .containerone {
   background-image: url("../img/pirate-ship.jpg");
   background-repeat:no-repeat; 
   background-position:center; 
