--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -37,6 +37,7 @@ $body-bg: white;
   background-position:center; 
   background-size:cover;
   font-family: "Ewert", serif;
+  font-size: large;
   }
 
  .display-4 {
